Fix font of expand/collapse action in accounts sidebar
Ref #1418

--- a/css/mail.scss
+++ b/css/mail.scss
@@ -127,6 +127,9 @@
 	display: inline-block !important;
 }
 
+#accounts-list li.collapse-folders a {
+	color: var(--color-text-maxcontrast);
+}
 
 #emptycontent,
 #mail-messages #emptycontent.emptycontent-search {
